<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_students"
        style="@style/ButtonStyle1"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/colorPrimary"
        android:text="@string/button_students"
        android:textColor="?attr/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/button_teachers"
        app:layout_constraintStart_toStartOf="@+id/button_teachers" />

    <Button
        android:id="@+id/button_teachers"
        style="@style/ButtonStyle2"
        android:layout_marginBottom="76dp"
        android:background="?attr/colorPrimary"
        android:text="@string/button_teachers"
        android:textColor="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="174dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo__hse_cmyk_e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="112dp"
        android:layout_height="38dp"
        android:layout_marginBottom="24dp"
        android:text="@string/settings"
        android:background="?attr/colorPrimaryVariant"
        android:textColor="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>